2002-01-28  Seth Nickell  <snickell@stanford.edu>

	* menu.c: (create_root_menu):

	Replace "Execute" with "Run", to avoid using threatening
	language.

2002-01-28  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-panel-properties.desktop:

	Install into the new CC capplets location.

2002-01-28  Anders Carlsson  <andersca@gnu.org>

	* gnome-run.c (add_columns): Use a single tree view column
	and pack both cell renderers in it. 
	(create_simple_contents): Add a shadow to the scrolled window.

2002-01-28  Glynn,,,  <set EMAIL_ADDRESS environment variable>

	reviewed by: <delete if not using a buddy>

	* foobar-widget.c: (foobar_widget_new):

2002-01-28  Padraig O'Briain  <padraig.obriain@sun.com>

	Initial implementation of keyboard move functionality for ButtonWidget.
	* button-widget.[ch]
	Define action signals "push-move", "switch-move" and "free-move"
	and associate keybindings with them
	Implement default signal handlers button_widget_push_move,
	button_widget_switch_move, button_widget_free_move

	* panel-widget.[ch]
	Define action signal end-move to allow termination of move using
	keyboard. Use Escape as keybinding for this action. This is different
	from Calum's original spec but I have discussed it with him.
	Update panel_sub_event_handler() and panel_widget_applet_event() so 
	that Escape causes panel_widget_end_move() is called.
	Add panel_widget_push_applet, panel_widget_switch_applet,
	panel_widget_free_move_applet to implement "push-move", "switch-move"
	and "free-move"
	Remove calls to g_return_if_fail (foo != NULL) if followed by calls
	to g_return_if_fail (GTK_IS_BAR (foo));
	
2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* panel-per-panel-config.schemas:

	And switch seconds off to minimize the disturbance caused
	by the resizing problems.

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* panel-per-panel-config.schemas:

	Move "pager" into the upper right hand corner.

2002-01-27  Glynn Foster  <glynn.foster@sun.com>
